--- a/Резюме.md
+++ b/Резюме.md
@@ -33,3 +33,5 @@
 ![Nekommerch-2-1464524-ORF](https://user-images.githubusercontent.com/54329999/144024398-b6b901b3-e27d-466a-9de8-c2ad55a0c53e.jpg)
 ![Nekommerch-2-1464511-ORF](https://user-images.githubusercontent.com/54329999/144024407-258252df-05d9-4bd9-b12a-a88c64b65979.jpg)
 ![image](https://user-images.githubusercontent.com/54329999/144025497-84385dc0-407d-4803-9604-9f266c3ed706.png)
+![image](https://user-images.githubusercontent.com/54329999/144026852-caaab526-7798-485c-838d-5fa392ee4619.png)
+![image](https://user-images.githubusercontent.com/54329999/144026936-05bd6892-4c82-4bf9-9164-de1b43af09a3.png)
