--- a/Резюме.md
+++ b/Резюме.md
@@ -6,9 +6,9 @@
 ---
 ### Мои контактные данные: +7909*****74, han0ken@mail.ru;
 ---
-### Моей основной целью является научиться программировать, а также работать в программах защиты информации. Желаемой должностью является "Специалист по тестированию на проникновение (pentest)";
+### 🖥Моей основной целью является научиться программировать, а также работать в программах защиты информации. Желаемой должностью является "Специалист по тестированию на проникновение (pentest)";
 ---
-# **Данные о моем образовании:**
+# 👨‍🎓**Данные о моем образовании:**
 ##   МБОУ СОШ №4:
 ###   — 2010 — 2019гг. ;
    
