--- a/Резюме.md
+++ b/Резюме.md
@@ -1,10 +1,10 @@
-# Приветствую вас в своем резюме!
+# 👋Приветствую вас в своем резюме!
 ---
 # Мое ФИО: Калако Алексей Николаевич
 ---
 ## Моя дата рождения(возраст): 19.02.2004(17);
 ---
-### Мои контактные данные: +7909*****74, han0ken@mail.ru;
+### 📧Мои контактные данные: +7909*****74, han0ken@mail.ru;
 ---
 ### 🖥Моей основной целью является научиться программировать, а также работать в программах защиты информации. Желаемой должностью является "Специалист по тестированию на проникновение (pentest)";
 ---
@@ -18,8 +18,8 @@
 ###   — Оператор ЭВМ;
    
    
-### Опыт работы - отсутствует;
-### Дополнительные навыки (владение компьютером, владение Английским языком, наличие водительских прав, владею языком C#, другое).
+### 💼Опыт работы - отсутствует;
+### 📚Дополнительные навыки (владение компьютером, владение Английским языком, наличие водительских прав, владею языком C#, другое).
 
 # Мои преимущества: 
 ### • Ответственность
@@ -28,7 +28,7 @@
 ### • Многофункциональность
 ### • Нестандартное мышление
 ---
-# Сертификаты:
+# 🎖Сертификаты:
 ![Nekommerch-2-1485467-ORF](https://user-images.githubusercontent.com/54329999/144024372-7fa43a34-c622-4c52-88f2-4d6cb6defc7b.jpg)
 ![Nekommerch-2-1464524-ORF](https://user-images.githubusercontent.com/54329999/144024398-b6b901b3-e27d-466a-9de8-c2ad55a0c53e.jpg)
 ![Nekommerch-2-1464511-ORF](https://user-images.githubusercontent.com/54329999/144024407-258252df-05d9-4bd9-b12a-a88c64b65979.jpg)
