--- a/Резюме.md
+++ b/Резюме.md
@@ -6,20 +6,26 @@
 ---
 ### 📧Мои контактные данные: +7909*****74, han0ken@mail.ru;
 ---
-### 🖥Моей основной целью является научиться программировать, а также работать в программах защиты информации. Желаемой должностью является "Специалист по тестированию на проникновение (pentest)";
+### 🖥Моей основной целью является стать высококвалифицированным специалистом по информационной безопасности
+### Желаемой должностью является "Специалист по тестированию на проникновение (pentest)";
 ---
 # 👨‍🎓**Данные о моем образовании:**
 ##   МБОУ СОШ №4:
 ###   — 2010 — 2019гг. ;
    
 ##   ГАПОУ НППК:
-###   — 2019 — 2023гг. ;
+###   — 2019 — настоящее время ;
 ###   — Специалист по информационной безопасности;
 ###   — Оператор ЭВМ;
    
    
 ### 💼Опыт работы - отсутствует;
-### 📚Дополнительные навыки (владение компьютером, владение Английским языком, наличие водительских прав, владею языком C#, другое).
+### 📚Дополнительные навыки:
+• Продвинутый пользователь ПК; 
+• Участник IT-Planet;
+• Владею языком C#;
+• Владею языком Phyton;
+•
 
 # Мои преимущества: 
 ### • Ответственность
