--- a/Резюме.md
+++ b/Резюме.md
@@ -6,7 +6,7 @@
 ---
 ### 📧Мои контактные данные: +7909*****74, han0ken@mail.ru;
 ---
-### Мой проект по ОА и П: [https://github.com/Han0ken/Biblio_Project](ссылка)
+### Мой проект по ОА и П: [проект](https://github.com/Han0ken/Biblio_Project)
 ---
 ### 🖥Моей основной целью является стать высококвалифицированным специалистом по информационной безопасности
 ### Желаемой должностью является "Специалист по тестированию на проникновение (pentest)";
