--- a/Резюме.md
+++ b/Резюме.md
@@ -1,10 +1,13 @@
-# 👋Приветствую вас в своем резюме!
----
-# Мое ФИО: Калако Алексей Николаевич
----
-## Моя дата рождения(возраст): 19.02.2004(17);
----
-### 📧Мои контактные данные: +7909*****74, han0ken@mail.ru;
+### Калако Алексей 
+## Мужчина, 17 лет, родился 19 февраля 2004
+
+## +7 (909)-243-65-74
+## han0ken@mail.ru — предпочитаемый способ связи
+
+## Проживает: Новозыбков
+## Гражданство: Россия, есть разрешение на работу: Россия
+## Не готов к переезду, не готов к командировкам
+
 ---
 ### Мой проект по ОА и П: [проект](https://github.com/Han0ken/Biblio_Project)
 ---
@@ -27,7 +30,6 @@
 • Участник IT-Planet;
 • Владею языком C#;
 • Владею языком Phyton;
-•
 
 # Мои преимущества: 
 ### • Ответственность
