--- a/Резюме.md
+++ b/Резюме.md
@@ -6,7 +6,7 @@
 
 ## Проживает: Новозыбков
 ## Гражданство: Россия, есть разрешение на работу: Россия
-## Не готов к переезду, не готов к командировкам
+## Готов к переезду, готов к командировкам
 
 ---
 ### Мой проект по ОА и П: [проект](https://github.com/Han0ken/Biblio_Project)
