--- a/Резюме.md
+++ b/Резюме.md
@@ -10,6 +10,8 @@
 
 ---
 ### Мой проект по ОА и П: [проект](https://github.com/Han0ken/Biblio_Project)
+### Портфолио работ в Adobe: [проект](https://github.com/Han0ken/Biblio_Project)
+### Мой бот для студенческой группы: [проект](https://t-do.ru/nppk36_bot)
 ---
 ### 🖥Моей основной целью является стать высококвалифицированным специалистом по информационной безопасности
 ### Желаемой должностью является "Специалист по тестированию на проникновение (pentest)";
@@ -22,16 +24,31 @@
 ###   — 2019 — настоящее время ;
 ###   — Специалист по информационной безопасности;
 ###   — Оператор ЭВМ;
-   
-   
+---
 ### 💼Опыт работы - отсутствует;
 ### 📚Дополнительные навыки:
-• Продвинутый пользователь ПК; 
-• Участник IT-Planet;
-• Владею языком C#;
-• Владею языком Phyton;
-
-# Мои преимущества: 
+### • Продвинутый пользователь ПК; 
+### • Участник IT-Planet;
+### • Владение языком C#;
+### • Владение языком Phyton;
+### • Владение Adobe Photoshop, Illustrator, Media Encoder, After Effects;
+### • Визуализация результатов работы
+### • Умение анализировать данные
+### • Эффективные коммуникации
+### • Анализ вредоносного кода;
+### • Анализ риска;
+### • Безопасность облака;
+### • Анализ безопасности;
+### • Обнаружение вторжений;
+### • Настройка IP;
+### • Этичное хакерство;
+### • Настройка ОС;
+### • Администрирование сети;
+### • Проектирование СКС;	
+### • Windows Server;
+### • Linux	MySQL;
+---
+# Личные качества: 
 ### • Ответственность
 ### • Быстро учусь
 ### • Лидерство
@@ -45,3 +62,5 @@
 ![image](https://user-images.githubusercontent.com/54329999/144025497-84385dc0-407d-4803-9604-9f266c3ed706.png)
 ![image](https://user-images.githubusercontent.com/54329999/144026852-caaab526-7798-485c-838d-5fa392ee4619.png)
 ![image](https://user-images.githubusercontent.com/54329999/144026936-05bd6892-4c82-4bf9-9164-de1b43af09a3.png)
+![image](https://user-images.githubusercontent.com/54329999/147366037-f564a575-1a6b-45e4-8760-9b207837ed51.png)
+![image](https://user-images.githubusercontent.com/54329999/147366055-9af2e672-eb41-42fc-8442-ce84fd4516b1.png)
