--- a/Резюме.md
+++ b/Резюме.md
@@ -10,8 +10,8 @@
 
 ---
 ### Мой проект по ОА и П: [проект](https://github.com/Han0ken/Biblio_Project)
-### Портфолио работ в Adobe: [проект](https://github.com/Han0ken/Biblio_Project)
-### Мой бот для студенческой группы: [проект](https://t-do.ru/nppk36_bot)
+### Портфолио работ в Adobe: [портфолио](https://t.me/+TMIIY8sOuY5hYTYy)
+### Мой бот для студенческой группы: [бот](https://t-do.ru/nppk36_bot)
 ---
 ### 🖥Моей основной целью является стать высококвалифицированным специалистом по информационной безопасности
 ### Желаемой должностью является "Специалист по тестированию на проникновение (pentest)";
