--- a/Резюме.md
+++ b/Резюме.md
@@ -9,7 +9,7 @@
 ## Готов к переезду, готов к командировкам
 
 ---
-### Мой проект по ОА и П: [проект](https://github.com/Han0ken/Biblio_Project)
+### Мой проект по ОА и П: [проект](https://github.com/Han0ken/biblioteka)
 ### Портфолио работ в Adobe: [портфолио](https://t.me/+TMIIY8sOuY5hYTYy)
 ### Мой бот для студенческой группы: [бот](https://t-do.ru/nppk36_bot)
 ---
