--- a/Резюме.md
+++ b/Резюме.md
@@ -3,6 +3,10 @@
 
 ## +7 (909)-243-65-74
 ## han0ken@mail.ru — предпочитаемый способ связи
+<p align='left'>
+   <a href="https://vk.com/han0ken/">
+       <img src="https://img.shields.io/badge/вконтакте-%232E87FB.svg?&style=for-the-badge&logo=vk&logoColor=white%22/%3E%22/%3E"/></a>
+   
 
 ## Проживает: Новозыбков
 ## Гражданство: Россия, есть разрешение на работу: Россия
@@ -54,6 +58,63 @@
 ### • Лидерство
 ### • Многофункциональность
 ### • Нестандартное мышление
+---
+EN:
+## Kalako Alexey
+## Male, 17 years old, born February 19, 2004
+---
+## +7 (909)-243-65-74
+## han0ken@mail.ru - preferred method of communication
+--- 
+## Lives in: Novozybkov
+## Citizenship: Russia, there is a work permit: Russia
+## Ready to move, ready for business trips
+---
+### My project on OA and P: [project](https://github.com/Han0ken/biblioteka )
+### Portfolio of works in Adobe: [portfolio](https://t.me /+TMIIY8sOuY5hYTYy)
+### My bot for student group: [bot](https://t-do.ru/nppk36_bot)
+---
+### 🖥 My main goal is to become a highly qualified information security specialist
+### The desired position is "Penetration Testing Specialist (pentest)";
+---
+# 👨‍🎓 **Information about my education:**
+## MBOU SOSH No. 4:
+### - 2010-2019. ;
+
+## GAPOU NPPK:
+### - 2019 - present ;
+### - Information Security Specialist;
+### - Computer Operator;
+---
+### 💼 Work experience - no;
+### 📚 Additional skills:
+### • Advanced PC User;
+### • IT-Planet member;
+### • C language proficiency#;
+### • Knowledge of the Phyton language;
+### • Ownership of Adobe Photoshop, Illustrator, Media Encoder, After Effects;
+### • Visualization of work results
+### • Ability to analyze data
+### * Effective communication
+### • Malicious code analysis;
+### • Risk analysis;
+### * Cloud Security;
+### • Security analysis;
+### • Intrusion Detection;
+### * IP Setup;
+### • Ethical Hacking;
+### * OS Setup;
+### * Network Administration;
+### • SCS design;
+### • Windows Server;
+### • Linux MySQL;
+---
+# Personal qualities:
+### • Responsibility
+### * Learning fast
+### • Leadership
+### • Multifunctionality
+### * Out-of-the-box thinking
 ---
 # 🎖Сертификаты:
 ![Nekommerch-2-1485467-ORF](https://user-images.githubusercontent.com/54329999/144024372-7fa43a34-c622-4c52-88f2-4d6cb6defc7b.jpg)
