--- a/Резюме.md
+++ b/Резюме.md
@@ -59,7 +59,7 @@
 ### • Многофункциональность
 ### • Нестандартное мышление
 ---
-EN:
+# EN:
 ## Kalako Alexey
 ## Male, 17 years old, born February 19, 2004
 ---
@@ -95,26 +95,26 @@ EN:
 ### • Ownership of Adobe Photoshop, Illustrator, Media Encoder, After Effects;
 ### • Visualization of work results
 ### • Ability to analyze data
-### * Effective communication
+### • Effective communication
 ### • Malicious code analysis;
 ### • Risk analysis;
-### * Cloud Security;
+### • Cloud Security;
 ### • Security analysis;
 ### • Intrusion Detection;
 ### * IP Setup;
 ### • Ethical Hacking;
-### * OS Setup;
-### * Network Administration;
+### • OS Setup;
+### • Network Administration;
 ### • SCS design;
 ### • Windows Server;
 ### • Linux MySQL;
 ---
 # Personal qualities:
 ### • Responsibility
-### * Learning fast
+### • Learning fast
 ### • Leadership
 ### • Multifunctionality
-### * Out-of-the-box thinking
+### • Out-of-the-box thinking
 ---
 # 🎖Сертификаты:
 ![Nekommerch-2-1485467-ORF](https://user-images.githubusercontent.com/54329999/144024372-7fa43a34-c622-4c52-88f2-4d6cb6defc7b.jpg)
